Rename HashMapM2 to HashMap2M across project
Renamed HashMapM2.c/h to HashMap2M.c/h and updated all references in source and header files to reflect the new naming. This improves consistency and clarity in the codebase.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ set(LIB_SOURCES
         libs/BPlusStorage.c
         libs/HashUtils.c
         libs/HashMap.c
-        libs/HashMapM2.c
+        libs/HashMap2M.c
 )
 set(LIB_HEADERS
         libs/BinaryTree.h
@@ -31,7 +31,7 @@ set(LIB_HEADERS
         libs/BPlusStorage.h
         libs/HashUtils.h
         libs/HashMap.h
-        libs/HashMapM2.h
+        libs/HashMap2M.h
 )
 
 #inclua src aqui
